objects/AIA_Benefit_Design_Product__c.object
<CustomObject>
    <fields>
        <fullName>Family_Out_of_Pocket_Calculation_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family OOP Calculation Other</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FertilityAgents__c</fullName>
        <label>Fertility Agents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fertility_Agents_Limitation_Others__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fertility Agents Limitation/Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Arrangement__c</fullName>
        <label>Financial Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstHelp__c</fullName>
        <formula>Text(Proposed_Products__r.FirstHelp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstHelp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formulary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Formulary</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Exclusion_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Exclusion Description</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_Exclusion__c</fullName>
        <label>Full Exclusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fully_Insured__c</fullName>
        <label>Member Penalty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No member penalty</fullName>
                </value>
                <value>
                    <fullName>50% penalty</fullName>
                </value>
                <value>
                    <fullName>20% penalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <label>Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMS_Mandate_Description__c</fullName>
        <defaultValue>"Updating Global Maternity to pay pre-natal visits as part of the Women’s Preventive benefit.(Individual Pre-natal office visits are already included in existing Women’s Preventative Health Services)"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Global Maternity Services Mandate Description.</inlineHelpText>
        <label>GMS Mandate Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMS_Mandate_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GenDispsng__c</fullName>
        <label>GenDispsng</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MANDATORY-member charged NonPreferred Brand Copay / Coinsurance plus the cost difference.</fullName>
                </value>
                <value>
                    <fullName>RESTRICTED-member charged NonPreferred Brand Copay / cost difference waived when physician directs Dispense as Written (DAW rules)</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY-standard: member charged applicable copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GenStepTherapy__c</fullName>
        <label>GenStepTherapy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gen_Referal_Mandate_Description__c</fullName>
        <defaultValue>"Covered services received by referral paid In-Network."</defaultValue>
        <description>Covered services received by referral paid In-Network.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>General Referral Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Referrals__c</fullName>
        <label>General Referrals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneriStepTherapy__c</fullName>
        <label>Generic Step Therapy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Dispensing__c</fullName>
        <label>Generic Dispensing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory Generics</fullName>
                </value>
                <value>
                    <fullName>Restricted Generics</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Drugs_Tier_1__c</fullName>
        <label>Generic Drugs (Tier 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Step_Therapy_F__c</fullName>
        <formula>( Proposed_Products__r.Generic_Step_Therapy_F__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Step Therapy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic__c</fullName>
        <label>Generic Step Therapy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Maternity_Services__c</fullName>
        <label>Global Maternity Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_PPACA_Status__c</fullName>
        <label>PPACA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_Status__c</fullName>
        <label>Grandfathered Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grandfathered</fullName>
                </value>
                <value>
                    <fullName>Non-Grandfathered</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GrowthHormone__c</fullName>
        <label>Growth Hormone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HBSelectGeneric__c</fullName>
        <label>HB Select Generic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waive Ded/Waive Copay (Standard)</fullName>
                </value>
                <value>
                    <fullName>Waive Ded/Apply Copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HB_Select_Generic_Drawloop__c</fullName>
        <formula>IF(TEXT(Related_Medical_Product__r.CDH__c)='Yes', Text(HBSelectGeneric__c) ,Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HB Select Generic Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_benefit_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has_benefit_Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INN_OON_Ded_Contribute_To_Each_Other__c</fullName>
        <inlineHelpText>Standard default is Yes for ASO and Risk business.</inlineHelpText>
        <label>INN &amp; OON Ded Contribute to each Other?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_Annual_Maximum_combined__c</fullName>
        <label>INN and OON Annual Maximum combined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_Lifetime_Maximum_combined__c</fullName>
        <label>INN and OON Lifetime Maximum combined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_OOP_Contribute_To_Each_Other__c</fullName>
        <inlineHelpText>Standard default is Yes for ASO and Risk business.</inlineHelpText>
        <label>INN &amp; OON OOP Contribute to Each Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_or_Contracted_Provider_Penalty_c__c</fullName>
        <formula>Plan_Name__r.INN_or_Contracted_Provider_Penalty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN_or_Contracted_Provider_Penalty__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPV_Mandate_Description__c</fullName>
        <defaultValue>"he USPSTF recommendation includes screening for intimate partner violence, such as domestic violence, for women of childbearing age and provide or refer women who screen positive to intervention services. This recommendation applies to women who do not have signs or symptoms of abuse"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Intimate Partner Violence Screening Mandate Description</inlineHelpText>
        <label>IPV Mandate Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPV_Mandate_Effective_Date__c</fullName>
        <description>IPV_Mandate_Effective_Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_BRFCustom__c</fullName>
        <formula>Proposed_Products__r.Custom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS BRFCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Imp_Number__c</fullName>
        <formula>Benefit_Design__r.Implementation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Imp Number Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Care_Out_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integrated Care Out Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Carved_Out_Vendor__c</fullName>
        <label>Integrated – RX Carved-Out Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVS (Direct)</fullName>
                </value>
                <value>
                    <fullName>ESI</fullName>
                </value>
                <value>
                    <fullName>Other - Requires Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_DM_Wellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrated DM/Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_Ded_Indicator__c</fullName>
        <label>Integrated Rx Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Deductible_Integrator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integrated Deductible Integrator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Deductibles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integrated Deductibles</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Deductibles_and_OOPs__c</fullName>
        <label>Integrated Deductibles and OOPs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Non_Integrated__c</fullName>
        <label>RX Integration Deductible Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Integrated_Ded_Indicator__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Integrated - Carved-Out</fullName>
                </value>
                <value>
                    <fullName>Non-Integrated</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_OOP_Integration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integrated OOP Indicator</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_OOP_Max_Carved_Out_Vendor__c</fullName>
        <label>Integrated – OOP Max Carved-Out Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVS (Direct)</fullName>
                </value>
                <value>
                    <fullName>ESI</fullName>
                </value>
                <value>
                    <fullName>Other – Requires Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intimate_Part_Violence_Screening_Cover1__c</fullName>
        <formula>"Yes"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Intimate Partner Violence Screening - Covered</inlineHelpText>
        <label>IPVS - Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intimate_Part_Violence_Screening_Covered__c</fullName>
        <defaultValue>"Yes"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Intimate Part Violence Screening Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intimate_Partner_Violence_Screening1__c</fullName>
        <formula>"The USPSTF recommendation includes screening for intimate partner violence, such as domestic violence, for women of childbearing age and provide or refer women who screen positive to intervention services. This recommendation applies to women who do not have signs or symptoms of abuse"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Turnkey for all existing accounts, New Accounts effective 5/1/13 and after.</inlineHelpText>
        <label>IPV Mandate Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intimate_Partner_Violence_Screening__c</fullName>
        <label>Intimate Partner Violence Screening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>K_Group_s__c</fullName>
        <description>Updated field label from Group # s to K Group #s acc to us 151</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Separate with commas and a space.</inlineHelpText>
        <label>K Group #s</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Ancillary__c</fullName>
        <formula>IF(ISPICKVAL(Product_Line__c,'HMO')&amp;&amp;ISPICKVAL(Funding_Arrangement__c,'Risk'),'CFBC',(IF(Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;(ISPICKVAL(Funding_Arrangement__c,'ASO'))
&amp;&amp;((ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery"))||
(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-Prince George's"))),'GHMSI',(IF(Benefit_Design__r.Account__r.BillingState='MD'
&amp;&amp;(ISPICKVAL(Funding_Arrangement__c,'ASO'))&amp;&amp;(NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery"))||
NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-Prince George's"))),'CFMI',
(IF(Benefit_Design__r.Account__r.BillingState='DC'||Benefit_Design__r.Account__r.BillingState='VA','GHMSI',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;
((ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery"))||
(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-Prince George's"))))||
(Benefit_Design__r.Account__r.BillingState='DC'||Benefit_Design__r.Account__r.BillingState='VA')&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;(NOT(ISPICKVAL(Product_Category__c,"Medical")))&amp;&amp;
((AccDrugName__c='BlueChoiceHMOOpenAccess')||
(AccDrugName__c='BlueChoiceOpt-OutOpenAccess')||
(AccDrugName__c='HealthyBlue')||
(AccDrugName__c='BlueChoiceAdvantage')),'GHMSI',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;
(NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery")||
ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-Prince George's"))))&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;(NOT(ISPICKVAL(Product_Category__c,"Medical")))&amp;&amp;
((AccDrugName__c='BlueChoiceHMOOpenAccess')||
(AccDrugName__c='BlueChoiceOpt-OutOpenAccess')||
(AccDrugName__c='HealthyBlue')||
(AccDrugName__c='BlueChoiceAdvantage')),'CFMI',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;
(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery")||
ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-Prince George's")))||
(Benefit_Design__r.Account__r.BillingState='DC'||Benefit_Design__r.Account__r.BillingState='VA')&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;
((AccDrugName__c='BlueChoiceOpt-OutPlus')||
(AccDrugName__c='BluePreferred')||
(AccDrugName__c='SelectPreferred')||
(AccDrugName__c='Indemnity')||
(AccMedicalName__c='BlueChoiceOpt-OutPlus')||
(AccMedicalName__c='BluePreferred')||
(AccMedicalName__c='SelectPreferred')||
(AccMedicalName__c='Indemnity')),'GHMSI',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;
(NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery")||
ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-Prince George's"))))&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;
((AccDrugName__c='BlueChoiceOpt-OutPlus')||
(AccDrugName__c='BluePreferred')||
(AccDrugName__c='Indemnity')||
(AccMedicalName__c='BlueChoiceOpt-OutPlus')||
(AccMedicalName__c='BluePreferred')||
(AccMedicalName__c='Indemnity')),'CFMI',

'')))))))))))))))</formula>
        <label>Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Medical__c</fullName>
        <formula>IF(ISPICKVAL(Product_Line__c,'HMO')&amp;&amp;ISPICKVAL(Funding_Arrangement__c,'Risk'),'CFBC',(IF(Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;(ISPICKVAL(Funding_Arrangement__c,'ASO'))
&amp;&amp;((ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery"))||
(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-PrinceGeorge's"))),'GHMSI',(IF(Benefit_Design__r.Account__r.BillingState='MD'
&amp;&amp;(ISPICKVAL(Funding_Arrangement__c,'ASO'))&amp;&amp;(NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery"))||
NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-PrinceGeorge's"))),'CFMI',
(IF(Benefit_Design__r.Account__r.BillingState='DC'||Benefit_Design__r.Account__r.BillingState='VA'&amp;&amp;ISPICKVAL(Product_Line__c,'PPO'),'GHMSI',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery")||
ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-PrinceGeorge's")))||(Benefit_Design__r.Account__r.BillingState='DC'||Benefit_Design__r.Account__r.BillingState='VA')&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;(ISPICKVAL(Product_Category__c,"Medical"))&amp;&amp;
((AccMedicalName__c='BlueChoiceHMOOpenAccess')||
(AccMedicalName__c='BlueChoiceOpt-OutOpenAccess')||
(AccMedicalName__c='HealthyBlue')||
(AccMedicalName__c='BlueChoiceAdvantage')),'CFBC',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;
(NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery")||
ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-PrinceGeorge's"))))&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;(ISPICKVAL(Product_Category__c,"Medical"))&amp;&amp;
((AccMedicalName__c='BlueChoiceHMOOpenAccess')||
(AccMedicalName__c='BlueChoiceOpt-OutOpenAccess')||
(AccMedicalName__c='HealthyBlue')||
(AccMedicalName__c='BlueChoiceAdvantage')),'CFBC',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;
(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery")||
ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-PrinceGeorge's")))||
(Benefit_Design__r.Account__r.BillingState='DC'||Benefit_Design__r.Account__r.BillingState='VA')&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;
((AccDrugName__c='BlueChoiceOpt-OutPlus')||
(AccDrugName__c='BluePreferred')||
(AccDrugName__c='SelectPreferred')||
(AccDrugName__c='Indemnity')||
(AccMedicalName__c='BlueChoiceOpt-OutPlus')||
(AccMedicalName__c='BluePreferred')||
(AccMedicalName__c='SelectPreferred')||
(AccMedicalName__c='Indemnity')),'GHMSI',

(IF((Benefit_Design__r.Account__r.BillingState='MD'&amp;&amp;
(NOT(ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"MO-Montgomery")||
ISPICKVAL(Benefit_Design__r.Account__r.Billing_County_Code__c,"PG-PrinceGeorge's"))))&amp;&amp;
ISPICKVAL(Funding_Arrangement__c,'Risk')&amp;&amp;
((AccDrugName__c='BlueChoiceOpt-OutPlus')||
(AccDrugName__c='BluePreferred')||
(AccDrugName__c='Indemnity')||
(AccMedicalName__c='BlueChoiceOpt-OutPlus')||
(AccMedicalName__c='BluePreferred')||
(AccMedicalName__c='Indemnity')),'CFMI',

'')))))))))))))))</formula>
        <label>Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Rules_LTLT_INN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Limit Rules (LTLT) - INN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Limit_Rules_LTLT_OON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Limit Rules (LTLT) - OON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Limit_Rules_LTLT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Limit Rules (LTLT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Product_Type__c</fullName>
        <description>B-03221</description>
        <label>MCP Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Managed Care</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCRD__c</fullName>
        <defaultValue>"CF01"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Automatic Actions</inlineHelpText>
        <label>MCRD</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magellan_Behavioral_Health_c__c</fullName>
        <formula>Plan_Name__r.Magellan_Behavioral_Health__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Magellan_Behavioral_Health__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailOrdDispnsMaintDaysSupp__c</fullName>
        <inlineHelpText>Mail Order Dispensing Maintenance Days Supply</inlineHelpText>
        <label>Mail order Dispensing Maint Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailOrdDispnsNMaintDaysSupp__c</fullName>
        <inlineHelpText>Mail Order Dispensing Non-Maintenance Days Supply</inlineHelpText>
        <label>Mail Dispensing Non-Maint Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailOrderAllDrugs__c</fullName>
        <label>Mail Order All Drugs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Choic_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Choice Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Choice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Choice</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Days_Supply__c</fullName>
        <inlineHelpText>Mail Order Dispensing Maintenance Days Supply</inlineHelpText>
        <label>Maintenance Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Drugs__c</fullName>
        <label>Maintenance Drugs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandate_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Plan Comments</label>
        <type>TextArea</type>
    </fields>
</CustomObject>